# algorithms-datastructures

./: .gitignore  CMakeLists.txt  conanfile.py
src/: CMakeLists.txt  library.cpp
src/include/skiena/ch3/: 3.1.h  3.2.h  3.3.h  3.4.h  3.8.h  ch3.h
src/skiena/ch3/: 3.1.cpp  3.2.cpp  3.3.cpp  3.8.cpp
tests/: CMakeLists.txt  library_test.cpp
tests/skiena/ch3/: ch3_tests.cpp
